k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 102
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backend
          image: ecommerce-backend:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: backup-storage
              mountPath: /backups
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "5"] # Graceful shutdown mandate
          ports:
            - containerPort: 8000
      volumes:
        - name: backup-storage
          persistentVolumeClaim:
            claimName: postgres-backups-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8000
  selector:
    app: backend
