k8s/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: pgbouncer
        image: edoburu/pgbouncer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6432
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
spec:
  ports:
  - port: 6432
  selector:
    app: pgbouncer
